[tool.poetry]
name = "revanced-api"
version = "0.1.0"
description = ""
authors = ["Alexandre Teles <alexandre.teles@ufba.br>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = { version = "^3.8.6", extras = ["speedups"] }
sanic = { version = "^23.6.0", extras = ["ext"] }
ujson = "^5.8.0"
asyncstdlib = "^3.10.9"
pydantic = "^1.10.13"
cytoolz = "^0.12.2"
beautifulsoup4 = "^4.12.2"
setuptools = "^69.0.2"
lxml = "^4.9.3"
mypy = "^1.7.1"
types-ujson = "^5.8.0.1"
types-aiofiles = "^23.2.0.0"
sanic-testing = "^23.6.0"
pytest-asyncio = "^0.21.1"
types-beautifulsoup4 = "^4.12.0.7"
pytest-md = "^0.2.0"
pytest-emoji = "^0.2.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
sqlalchemy = "^2.0.23"
sanic-beskar = "^2.2.12"
bson = "^0.5.10"
fastpbkdf2 = "^0.2"
cryptography = "^41.0.5"
sanic-limiter = { git = "https://github.com/Omegastick/sanic-limiter" }
sentry-sdk = { extras = ["sanic"], version = "^1.35.0" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
