[tool.poetry]
name = "revanced-api"
version = "0.1.0"
description = ""
authors = ["Alexandre Teles <alexandre.teles@ufba.br>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = { version = "^3.9.1", extras = ["speedups"] }
sanic = { version = "^23.12.1", extras = ["ext"] }
ujson = "^5.9.0"
pydantic = "^1.10.13"
asyncstdlib = "^3.12.0"
cytoolz = "^0.12.2"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
sqlalchemy = "^2.0.25"
sanic-beskar = "^2.3.2"
bson = "^0.5.10"
fastpbkdf2 = "^0.2"
cryptography = "^41.0.7"
sanic-limiter = { git = "https://github.com/Omegastick/sanic-limiter" }
sentry-sdk = { extras = ["sanic"], version = "^1.40.0" }

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
types-ujson = "^5.9.0.0"
types-aiofiles = "^23.2.0.20240106"
types-beautifulsoup4 = "^4.12.0.20240106"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
